# fritz-switch-profiles

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
fritz_switch_profiles/: __init__.py  fritz_switch_profiles.py
