[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "fritz_switch_profiles"
dist-name = "fritz-switch-profiles"
author = "eifinger"
author-email = "k.eifinger@googlemail.com"
home-page = "http://github.com/eifinger/fritz-switch-profiles"
classifiers = [
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "License :: OSI Approved :: MIT License"
    ]
requires = ["requests", "lxml"]
requires-python=">=3.6"
description-file="README.md"

[tool.flit.metadata.requires-extra]
test = [
    "pylint",
    "flake8",
    "mypy",
    "pre-commit",
    "black"
]

[tool.semantic_release]
version_variable="FoldingAtHomeControl/__init__.py:__version__"
build_command="pip install flit && flit build"
